--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@next/font": "13.1.0",
+    "@supabase/supabase-js": "^2.4.1",
+    "@thirdweb-dev/react": "^3.6.8",
+    "@thirdweb-dev/sdk": "^3.6.8",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "ethers": "^5.7.2",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.1.0",
     "typescript": "4.9.4"
   }
 }
