--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-youtube": "^10.1.0",
+    "twitter-api-client": "^1.6.1",
     "typescript": "4.9.4"
   }
 }
