--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cookies-next": "^2.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "ethers": "^5.7.2",
@@ -29,8 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-youtube": "^10.1.0",
-    "twitter": "^1.7.1",
-    "twitter-api-client": "^1.6.1",
+    "twitter-api-v2": "1.14.0",
     "typescript": "4.9.4"
   }
 }
