--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,4 @@ NEXT_PUBLIC_TWITTER_OAUTH_CLIENT_ID="THlMdlR1My1tQWpXYzMyd1pOUTg6MTpjaQ"
 NEXT_PUBLIC_TWITTER_OAUTH_CLIENT_SECRET="U4xX-yWTrGk_WKmZBsQf9TXJB9tCBamcEqV3pBFFXwK80Hzn8h"
 NEXT_PUBLIC_TWITTER_API_KEY="xOZazbRzsXfMMzEv4JVl77lBN"
 NEXT_PUBLIC_TWITTER_API_SECRET="tTpkQYoFoE68Vx6sGtPMwuU4JbZBGkX3jEa91nVYplr4gKSMYj-jrqZIa5aqQWa"
-NEXT_PUBLIC_TWITTER_CALLBACK_URL="https://nucleus-seven.vercel.app/stream"
+NEXT_PUBLIC_TWITTER_CALLBACK_URL="https://nucleus-seven.vercel.app/api/twitter/auth/callback"
